<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.calendartest.AddEventActivity">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <EditText
            android:id="@+id/edtEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="13"
            android:hint="@string/add_event_name"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/btnColorPick"
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_alignTop="@+id/edtEventName"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@+id/edtEventName"
            android:background="#00000000"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/palette_dimgray" />

        <EditText
            android:id="@+id/edtEventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edtEventName"
            android:layout_below="@+id/edtEventName"
            android:layout_marginTop="8dp"
            android:ems="13"
            android:hint="@string/add_event_location"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/btnLocationPick"
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_alignBottom="@+id/edtEventLocation"
            android:layout_alignStart="@+id/btnColorPick"
            android:background="#00000000"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/locationicon" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edtEventName"
            android:layout_alignRight="@id/btnColorPick"
            android:layout_below="@id/edtEventLocation"
            android:layout_marginTop="10dp"
            android:text="@string/add_event_all_day"
            android:textOff="@string/add_event_all_day"
            android:textOn="@string/add_event_all_day"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edtEventName"
            android:layout_below="@id/switch1"
            android:layout_marginTop="20dp"
            android:text="從"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edtEventName"
            android:layout_below="@+id/txtFrom"
            android:layout_marginTop="20dp"
            android:text="到"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDateFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txtFrom"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/txtFrom"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDateTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txtTo"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/txtTo"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTimeFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txtFrom"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/txtDateFrom"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTimeTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txtTo"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/txtDateTo"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtTo"
            android:layout_below="@id/txtTo"
            android:layout_marginTop="20dp"
            android:text="@string/add_event_repeat_frequency" />

        <Spinner
            android:id="@+id/repeatPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtRepeat"
            android:layout_alignRight="@id/btnLocationPick"
            android:layout_below="@id/txtRepeat"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:entries="@array/repeat_frequency" />

        <TextView
            android:id="@+id/txtPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtRepeat"
            android:layout_below="@id/repeatPicker"
            android:layout_marginTop="10dp"
            android:text="@string/add_event_privacy" />

        <Spinner
            android:id="@+id/privacyPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtPrivacy"
            android:layout_alignRight="@id/btnLocationPick"
            android:layout_below="@id/txtPrivacy"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:entries="@array/privacy" />

        <TextView
            android:id="@+id/txtRemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtPrivacy"
            android:layout_below="@id/privacyPicker"
            android:layout_marginTop="10dp"
            android:text="@string/add_event_remind" />

        <Spinner
            android:id="@+id/remindPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtFrom"
            android:layout_alignRight="@id/btnLocationPick"
            android:layout_below="@id/txtRemind"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:entries="@array/remind"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/edtEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edtEventName"
            android:layout_alignRight="@id/btnColorPick"
            android:layout_below="@id/remindPicker"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:ems="13"
            android:textColor="#000000"
            android:hint="@string/add_event_description"
            android:inputType="textPersonName" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
